@@ -1,4 +1,7 @@
-apply plugin: 'osgi'
+plugins {
+  id "biz.aQute.bnd.builder"
+}
+
 apply from: script("publishMaven")
 
 ext.displayName = "Spock Framework - Core Module"
@@ -17,7 +20,6 @@ dependencies {
   compile libs.hamcrest
 
   compile libs.jetbrainsAnnotations, optional
-  compile libs.ant, optional
   compile libs.asm, optional
   compile libs.bytebuddy, optional
   compile libs.cglib, optional
@@ -35,11 +37,7 @@ dependencies {
 
 jar {
   manifest {
-    name = 'spock-core'
     attributes(
-      'Created-By': "${System.properties['java.version']} (${System.properties['java.vendor']} ${System.properties['java.vm.version']})".toString(),
-      'Build-Date': buildDate,
-      'Build-Time': buildTime,
       'Build-Revision': versioning.info.commit,
       'Specification-Title': project.name,
       'Specification-Version': baseVersion,
@@ -49,20 +47,21 @@ jar {
       'Implementation-Vendor': 'spockframework.org',
       'Automatic-Module-Name': 'org.spockframework.core'
     )
-    instruction 'Export-Package', 'org.spockframework.*', 'spock.*'
-    instruction 'Embed-Dependency', 'groovy;inline=false', 'junit;inline=false'
-    instruction 'Import-Package',
-        'groovy.*;version="[2.4,4)"',
-        'org.codehaus.groovy.*;version="[2.4,4)"',
-        'org.junit.*;version="[4,6)"',
-        'org.hamcrest.*;version="[1,2)";resolution:=optional',
-        'org.objenesis.*;version="[2,3)";resolution:=optional',
-        'org.apache.tools.ant.*;version="[1.7,2)";resolution:=optional',
-        'net.bytebuddy.*;version="[1.9,2)";resolution:=optional',
-        'net.sf.cglib.*;version="[3.2,4)";resolution:=optional',
-        'org.objectweb.asm.*;version="[5.2,6)";resolution:=optional',
-        'org.w3c.dom.*'
   }
+  bnd(
+    'Export-Package': ['org.spockframework.*', 'spock.*'].join(','),
+    'Embed-Dependency': ['groovy;inline=false', 'junit;inline=false'].join(','),
+    'Import-Package': [
+      "groovy.*;version=\"[${groovyVersion},${org.gradle.util.VersionNumber.parse(groovyVersion).major + 1})\"",
+      "org.codehaus.groovy.*;version=\"[${groovyVersion},${org.gradle.util.VersionNumber.parse(groovyVersion).major + 1})\"",
+      "org.junit.*;version=\"[${libs.junitBom.version},${org.gradle.util.VersionNumber.parse(libs.junitBom.version).major + 1})\"",
+      "org.hamcrest.*;version=\"[${libs.hamcrest.version},${org.gradle.util.VersionNumber.parse(libs.hamcrest.version).major + 1})\";resolution:=optional",
+      "org.objenesis.*;version=\"[${libs.objenesis.version},${org.gradle.util.VersionNumber.parse(libs.objenesis.version).major + 1})\";resolution:=optional",
+      "net.bytebuddy.*;version=\"[${libs.bytebuddy.version},${org.gradle.util.VersionNumber.parse(libs.bytebuddy.version).major + 1})\";resolution:=optional",
+      "net.sf.cglib.*;version=\"[${libs.cglib.version},${org.gradle.util.VersionNumber.parse(libs.cglib.version).major + 1})\";resolution:=optional",
+      "org.objectweb.asm.*;version=\"[${libs.asm.version},${org.gradle.util.VersionNumber.parse(libs.asm.version).major + 1})\";resolution:=optional",
+      'org.w3c.dom.*'].join(',')
+  )
 }
 
 processResources {
